--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "tiled_wfc"
+description = "A n-dimensional tiled wave function collapse library"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 nd_matrix = "0.2.0"
